<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shivam.ecom.loginregister.register.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/register"
            app:titleTextAppearance="@style/ToolbarTitle" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUserImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="@dimen/_1sdp"
                android:src="@drawable/card_itunes"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/civUserImage"
                android:layout_marginTop="@dimen/_25sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLength="150"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textDirection="anyRtl" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameView"
                android:background="@color/colorLightBlue"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text|textEmailAddress"
                    android:maxLength="150"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textDirection="anyRtl"
                    android:background="@null"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordRegView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailView"
                android:layout_marginTop="@dimen/_10sdp"
                app:passwordToggleTint="@color/colorAccent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:textDirection="anyRtl" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/section_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightBlue"
                android:layout_below="@id/passwordRegView"
                android:layout_marginTop="@dimen/_10sdp"
             >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNumberView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/txt_mobile_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mobile_number"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textDirection="anyRtl" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/ColoredButton"
                android:background="@drawable/bg_blue_round_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:layout_below="@id/section_mobile_number"

                />


        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:text="@string/already_have_an_acoun"
        android:gravity="center"
        android:background="@color/colorLightBlue"

        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
